--- a/cmd/exp/compose.yml
+++ b/cmd/exp/compose.yml
@@ -8,7 +8,8 @@ services:
       POSTGRES_DB: lenslocked
     ports:
       - 5432:5432
-  
+    volumes:
+      - lenslockeddb:/var/lib/postgresql/data
   adminer:
     image: adminer
     restart: always
@@ -16,3 +17,5 @@ services:
       ADMINER_DESIGN: dracula
     ports:
       - 3333:8080
+volumes:
+  lenslockeddb:
